[package]
name = "gamepads"
categories = ["game-development"]
description = "API to access information about system gamepads."
edition = "2021"
keywords = ["gamedev", "joystick", "input", "gamepad", "macroquad"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fornwall/gamepads"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
gilrs = "0.10"
