[package]
name = "gamepads"
categories = ["game-development"]
description = "Library to access information about connected gamepads."
edition = "2021"
keywords = ["gamedev", "joystick", "input", "gamepad", "macroquad"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fornwall/gamepads"
version = "0.1.6"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [ "wasm-bindgen" ]
wasm-bindgen = ["dep:wasm-bindgen", "web-sys", "js-sys"]

[dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [
    "Gamepad",
    "GamepadButton",
    "GamepadMappingType",
    "Window",
    "Navigator",
], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
gilrs = "0.10"

[workspace]
members = [".", "examples/*"]
