[package]
name = "gamepads"
categories = ["game-development"]
description = "Library to access information about connected gamepads."
edition = "2021"
keywords = ["gamedev", "joystick", "input", "gamepad", "macroquad"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fornwall/gamepads"
version = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
android-winit = ["winit", "jni", "ndk-context"]
default = ["wasm-bindgen"]
wasm-bindgen = ["dep:wasm-bindgen", "web-sys", "js-sys"]

[dependencies]
# feature: wasm-bindgen
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [
    "Gamepad",
    "GamepadButton",
    "GamepadMappingType",
    "Window",
    "Navigator",
], optional = true }
# feature: android-winit
winit = { version = "0.30", features = [
    "android-native-activity",
], optional = true }
jni = { version = "0", optional = true }
ndk-context = { version = "0", optional = true }

[target.'cfg(not(any(target_os = "android", target_family = "wasm")))'.dependencies]
gilrs = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0"
log = "0"

[workspace]
members = [".", "examples/*"]
