[package]
name = "gamepads-wasm-bindgen"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gamepads = { path = "../../" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ['console', 'Document', 'Element', 'HtmlElement', 'Node', 'Window']
